--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^13.0.0",
     "mini-css-extract-plugin": "^2.9.2",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
