--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "codemirror": "^6.0.2",
     "css-loader": "^7.1.2",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "jquery": "^3.7.1",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
