add jsdoc, readme for docs, and build command for docs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,5 +16,11 @@
             "request": "launch",
             "type": "node-terminal"
         },
+        {
+            "command": "npm install; npm run docs",
+            "name": "Generate Dev Docs",
+            "request": "launch",
+            "type": "node-terminal"
+        },
     ]
 }
