--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "main.js",
   "scripts": {
     "serve": "webpack serve",
-    "build": "webpack"
+    "build": "webpack",
+    "docs": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
     "@codemirror/commands": "^6.8.1",
@@ -28,8 +29,10 @@
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
+    "clean-jsdoc-theme": "^4.3.0",
     "copy-webpack-plugin": "^13.0.0",
     "html-webpack-plugin": "^5.6.3",
+    "jsdoc": "^4.0.4",
     "mini-css-extract-plugin": "^2.9.2",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
